enable preview to run StructuredConcurrency tests